--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "at-parsetext",
+  "name": "my-parse-script",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Service to parse Google Calendar data and format phone numbers",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.18.2"
   }
 }
